# resEngineerAgent

./: .env.example  .gitignore  README.md  example_queries.py  interactive_agent.py  main.py  pyproject.toml  test_agent.py  test_geomech_simple.py  test_geomechanics.py
